--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.8.0",
     "mongodb": "^6.15.0",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
